--- a/src/app/layouts/user-layout/user-layout.component.html
+++ b/src/app/layouts/user-layout/user-layout.component.html
@@ -5,7 +5,7 @@
 
     <app-navigation
       [startHr]="true"
-      [listNavigation]="[]"
+      [listNavigation]="navigateMenu"
     ></app-navigation>
   </app-sidebar>
 
