--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @import "./assets/scss/variables";
 
 @import "../node_modules/bootstrap/scss/bootstrap";
+
+@import "./assets/scss/util";
