--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @import "../node_modules/bootstrap/scss/bootstrap";
 
 @import "./assets/scss/util";
+@import "./assets/scss/components/modal";
+@import "./assets/scss/components/inputs";
+@import "./assets/scss/components/tables";
