--- a/src/app/pages/_user/produtos/podutos-main/podutos-main.component.html
+++ b/src/app/pages/_user/produtos/podutos-main/podutos-main.component.html
@@ -2,13 +2,11 @@
 
   <card>
     <div class="mat-card-header">
-      <h4 class="card-title">title</h4>
+      <h4 class="card-title">Produtos</h4>
     </div>
     <div class="card-body">
       <crud-data-table
         [entityMap]="entity"
-        path="http://localhost:3000"
-        context="produtos"
       >
       </crud-data-table>
     </div>
