--- a/src/app/pages/_user/clientes/clientes-insert-edit/clientes-insert-edit.component.html
+++ b/src/app/pages/_user/clientes/clientes-insert-edit/clientes-insert-edit.component.html
@@ -122,6 +122,8 @@
 
 </div>
 
+<button class="btn btn-success" crud-salvar>salvar</button>
+
 <subComponent-enderecos #enderecosModal></subComponent-enderecos>
 
 <subComponent-contatos
