--- a/src/app/layouts/user-layout/user-layout.component.html
+++ b/src/app/layouts/user-layout/user-layout.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper d-flex align-items-stretch">
 
   <app-sidebar #sidebar>
-    <app-sidebar-logo></app-sidebar-logo>
+    <app-sidebar-logo url-img="assets/img/logo-socel.PNG"></app-sidebar-logo>
 
     <app-navigation
       [startHr]="true"
