--- a/src/app/pages/_user/clientes/clientes-main/clientes-main.component.html
+++ b/src/app/pages/_user/clientes/clientes-main/clientes-main.component.html
@@ -10,11 +10,8 @@
       >
       </crud-data-table>
     </div>
-    <div class="card-footer">
-      <button class="btn btn-success" [routerLink]="'novo'">Adicionar</button>
-    </div>
   </card>
 </div>
-
-<button class="btn btn-success" (click)="teste()">teste</button>
-<button class="btn btn-success" (click)="teste2()">teste by ID</button>
+<page-footer>
+  <button class="btn btn-success" [routerLink]="'novo'">Novo</button>
+</page-footer>
