--- a/src/app/pages/_user/servicos/servicos-insert-edit/servicos-insert-edit.component.html
+++ b/src/app/pages/_user/servicos/servicos-insert-edit/servicos-insert-edit.component.html
@@ -1,1 +1,36 @@
-<p>servicos-insert-edit works!</p>
+<div class="container">
+
+  <card>
+    <div class="card-header">
+      <h4 class="card-title">Serviço</h4>
+    </div>
+    <div class="card-body">
+      <form [formGroup]="form">
+        <div class="row">
+          <div class="col-6">
+            <label class="form-label">Nome <span class="fc-red">*</span></label>
+            <input class="form-control" formControlName="nome">
+          </div>
+          <div class="col-6">
+            <label class="form-label">Valor base de Serviço <span class="fc-red">*</span></label>
+            <input class="form-control" formControlName="valorBase">
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12">
+            <label class="form-label">Descrição
+            </label>
+            <textarea class="form-control" formControlName="descricao"></textarea>
+          </div>
+        </div>
+      </form>
+    </div>
+  </card>
+
+</div>
+
+<page-footer>
+  <button class="btn btn-success" crud-salvar>Salvar</button>
+  <button class="btn btn-success" crud-voltar>Voltar</button>
+</page-footer>
