--- a/src/app/pages/_user/lancamentos/lancamentos-main/lancamentos-main.component.html
+++ b/src/app/pages/_user/lancamentos/lancamentos-main/lancamentos-main.component.html
@@ -1,17 +1,25 @@
 <div id="page-clientes" class="container">
 
   <card>
-    <div class="mat-card-header">
+    <div class="card-header">
       <h4 class="card-title">Lançamentos</h4>
     </div>
     <div class="card-body">
       <crud-data-table
         [entityMap]="entity"
+        tableEventId="LancamentoEntity"
       >
       </crud-data-table>
     </div>
-    <div class="card-footer">
-      <button class="btn btn-success" [routerLink]="'novo'">Adicionar</button>
-    </div>
   </card>
 </div>
+
+<page-footer>
+  <button class="btn btn-success" (click)="modalLancamentos.addReceita()">Adicionar Receita</button>
+  <button class="btn btn-danger" (click)="modalLancamentos.addDespesa()">Adicionar Despesa</button>
+</page-footer>
+
+
+<subComponent-modal-lancamento
+  #modalLancamentos
+></subComponent-modal-lancamento>
