corrigindo title dos cards

--- a/src/app/pages/_user/produtos/podutos-main/podutos-main.component.html
+++ b/src/app/pages/_user/produtos/podutos-main/podutos-main.component.html
@@ -1,7 +1,7 @@
 <div id="page-clientes" class="container">
 
   <card>
-    <div class="mat-card-header">
+    <div class="card-header">
       <h4 class="card-title">Produtos</h4>
     </div>
     <div class="card-body">
