iniciando processo de migração da dg-crud. quase todos os metodos precisaram ser comentados para realizar o proceso aos poucos

--- a/src/app/pages/_user/clientes/clientes-main/clientes-main.component.html
+++ b/src/app/pages/_user/clientes/clientes-main/clientes-main.component.html
@@ -5,10 +5,10 @@
       <h4 class="card-title">Clientes</h4>
     </div>
     <div class="card-body">
-      <crud-data-table
-        [entityMap]="entity"
-      >
-      </crud-data-table>
+<!--      <crud-data-table-->
+<!--        [entityMap]="entity"-->
+<!--      >-->
+<!--      </crud-data-table>-->
     </div>
   </card>
 </div>
