--- a/src/app/pages/_user/clientes/clientes-insert-edit/clientes-insert-edit.component.html
+++ b/src/app/pages/_user/clientes/clientes-insert-edit/clientes-insert-edit.component.html
@@ -1,132 +1,132 @@
-<div id="page-clientes">
-  <form [formGroup]="form">
+<!--<div id="page-clientes">-->
+<!--  <form [formGroup]="form">-->
 
-    <div class="container-data">
-      <div class="row">
+<!--    <div class="container-data">-->
+<!--      <div class="row">-->
 
-        <div class="col-12">
-          <card>
-            <div class="card-body">
+<!--        <div class="col-12">-->
+<!--          <card>-->
+<!--            <div class="card-body">-->
 
-              <div class="row">
-                <div class="col-12">
-                  <div class="mb-3">
-                    <label class="form-label">Nome</label>
-                    <input formControlName="nome"  class="form-control">
-                  </div>
-                </div>
+<!--              <div class="row">-->
+<!--                <div class="col-12">-->
+<!--                  <div class="mb-3">-->
+<!--                    <label class="form-label">Nome</label>-->
+<!--                    <input formControlName="nome"  class="form-control">-->
+<!--                  </div>-->
+<!--                </div>-->
 
-              </div>
+<!--              </div>-->
 
-              <div class="row">
-                <div class="col-4">
-                  <div class="mb-3">
-                    <label class="form-label">Documento</label>
-                    <input type="text" class="form-control" formControlName="documento">
-                  </div>
-                </div>
+<!--              <div class="row">-->
+<!--                <div class="col-4">-->
+<!--                  <div class="mb-3">-->
+<!--                    <label class="form-label">Documento</label>-->
+<!--                    <input type="text" class="form-control" formControlName="documento">-->
+<!--                  </div>-->
+<!--                </div>-->
 
-                <div class="col-4 d-flex align-items-center pt-4">
-                  <div class="form-check">
-                    <input value="1" formControlName="pessoa_fisica" class="form-check-input" type="radio"
-                           name="pessoa_fisica" id="Pessoa_fisica">
-                    <label class="form-check-label" for="Pessoa_fisica">
-                      Pessoa Física
-                    </label>
-                  </div>
-                  <div class="form-check">
-                    <input value="0" formControlName="pessoa_fisica" class="form-check-input" type="radio"
-                           name="pessoa_fisica" id="Pessoa_juridica" checked>
-                    <label class="form-check-label" for="Pessoa_juridica">
-                      Pessoa Jurídica
-                    </label>
-                  </div>
-                </div>
+<!--                <div class="col-4 d-flex align-items-center pt-4">-->
+<!--                  <div class="form-check">-->
+<!--                    <input value="1" formControlName="pessoa_fisica" class="form-check-input" type="radio"-->
+<!--                           name="pessoa_fisica" id="Pessoa_fisica">-->
+<!--                    <label class="form-check-label" for="Pessoa_fisica">-->
+<!--                      Pessoa Física-->
+<!--                    </label>-->
+<!--                  </div>-->
+<!--                  <div class="form-check">-->
+<!--                    <input value="0" formControlName="pessoa_fisica" class="form-check-input" type="radio"-->
+<!--                           name="pessoa_fisica" id="Pessoa_juridica" checked>-->
+<!--                    <label class="form-check-label" for="Pessoa_juridica">-->
+<!--                      Pessoa Jurídica-->
+<!--                    </label>-->
+<!--                  </div>-->
+<!--                </div>-->
 
-                <div class="col-4 d-flex align-items-center pt-4">
-                  <div class="form-check">
-                    <input [disabled]="form.value['pessoa_fisica'] == '1'" value="1" class="form-check-input"
-                           type="radio" name="pessoa_fisica" id="masculino">
-                    <label class="form-check-label" for="masculino">
-                      Masculino
-                    </label>
-                  </div>
-                  <div class="form-check">
-                    <input [disabled]="form.value['pessoa_fisica'] == '1'" value="0" class="form-check-input"
-                           type="radio" name="pessoa_fisica" id="feminino" checked>
-                    <label class="form-check-label" for="feminino">
-                      Feminino
-                    </label>
-                  </div>
-                </div>
-              </div>
+<!--                <div class="col-4 d-flex align-items-center pt-4">-->
+<!--                  <div class="form-check">-->
+<!--                    <input [disabled]="form.value['pessoa_fisica'] == '1'" value="1" class="form-check-input"-->
+<!--                           type="radio" name="pessoa_fisica" id="masculino">-->
+<!--                    <label class="form-check-label" for="masculino">-->
+<!--                      Masculino-->
+<!--                    </label>-->
+<!--                  </div>-->
+<!--                  <div class="form-check">-->
+<!--                    <input [disabled]="form.value['pessoa_fisica'] == '1'" value="0" class="form-check-input"-->
+<!--                           type="radio" name="pessoa_fisica" id="feminino" checked>-->
+<!--                    <label class="form-check-label" for="feminino">-->
+<!--                      Feminino-->
+<!--                    </label>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--              </div>-->
 
-            </div>
+<!--            </div>-->
 
-          </card>
-        </div>
+<!--          </card>-->
+<!--        </div>-->
 
-      </div>
-    </div>
+<!--      </div>-->
+<!--    </div>-->
 
-    <div *ngIf="!!entity?.id" class="container-data">
-      <div class="row">
-        <card>
-          <div class="card-header">
-            <h4 class="card-title">Endereços</h4>
-          </div>
+<!--    <div *ngIf="!!entity?.id" class="container-data">-->
+<!--      <div class="row">-->
+<!--        <card>-->
+<!--          <div class="card-header">-->
+<!--            <h4 class="card-title">Endereços</h4>-->
+<!--          </div>-->
 
-          <div class="card-body">
-            <crud-data-table
-              [entityMap]="enderecosEntity"
-              tableEventId="enderecosEntity"
-              [persistentParams]="tableParams"
-            >
-            </crud-data-table>
-          </div>
+<!--          <div class="card-body">-->
+<!--            <crud-data-table-->
+<!--              [entityMap]="enderecosEntity"-->
+<!--              tableEventId="enderecosEntity"-->
+<!--              [persistentParams]="tableParams"-->
+<!--            >-->
+<!--            </crud-data-table>-->
+<!--          </div>-->
 
-          <div class="card-footer">
-            <button class="btn btn-success" (click)="enderecosModal.open()">Adicionar</button>
-          </div>
-        </card>
-      </div>
-    </div>
+<!--          <div class="card-footer">-->
+<!--            <button class="btn btn-success" (click)="enderecosModal.open()">Adicionar</button>-->
+<!--          </div>-->
+<!--        </card>-->
+<!--      </div>-->
+<!--    </div>-->
 
-    <div *ngIf="!!entity?.id" class="container-data">
-      <div class="row">
-        <card>
-          <div class="card-body">
-            <crud-data-table
-              [entityMap]="contatoEntity"
-              tableEventId="ContatoEntity"
-              [persistentParams]="tableParams"
-            >
-            </crud-data-table>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-success" (click)="contatoModal.open()">Adicionar</button>
-          </div>
-        </card>
-      </div>
-    </div>
+<!--    <div *ngIf="!!entity?.id" class="container-data">-->
+<!--      <div class="row">-->
+<!--        <card>-->
+<!--          <div class="card-body">-->
+<!--            <crud-data-table-->
+<!--              [entityMap]="contatoEntity"-->
+<!--              tableEventId="ContatoEntity"-->
+<!--              [persistentParams]="tableParams"-->
+<!--            >-->
+<!--            </crud-data-table>-->
+<!--          </div>-->
+<!--          <div class="card-footer">-->
+<!--            <button class="btn btn-success" (click)="contatoModal.open()">Adicionar</button>-->
+<!--          </div>-->
+<!--        </card>-->
+<!--      </div>-->
+<!--    </div>-->
 
 
-  </form>
+<!--  </form>-->
 
-</div>
+<!--</div>-->
 
-<page-footer>
-  <button class="btn btn-success" crud-salvar [backAfterSave]="false">Salvar</button>
-  <button class="btn btn-success" crud-salvar>Salvar e Voltar</button>
-  <button class="btn btn-secondary" crud-voltar>Voltar</button>
-</page-footer>
+<!--<page-footer>-->
+<!--  <button class="btn btn-success" crud-salvar [backAfterSave]="false">Salvar</button>-->
+<!--  <button class="btn btn-success" crud-salvar>Salvar e Voltar</button>-->
+<!--  <button class="btn btn-secondary" crud-voltar>Voltar</button>-->
+<!--</page-footer>-->
 
-<subComponent-enderecos
-  #enderecosModal
-  [idCliente]="entity?.id"
-></subComponent-enderecos>
+<!--<subComponent-enderecos-->
+<!--  #enderecosModal-->
+<!--  [idCliente]="entity?.id"-->
+<!--&gt;</subComponent-enderecos>-->
 
-<subComponent-contatos
-  #contatoModal
-  [idCliente]="entity?.id"
-></subComponent-contatos>
+<!--<subComponent-contatos-->
+<!--  #contatoModal-->
+<!--  [idCliente]="entity?.id"-->
+<!--&gt;</subComponent-contatos>-->
