habilitando clientes-main

--- a/src/app/pages/_user/clientes/clientes-main/clientes-main.component.html
+++ b/src/app/pages/_user/clientes/clientes-main/clientes-main.component.html
@@ -5,10 +5,7 @@
       <h4 class="card-title">Clientes</h4>
     </div>
     <div class="card-body">
-<!--      <crud-data-table-->
-<!--        [entityMap]="entity"-->
-<!--      >-->
-<!--      </crud-data-table>-->
+      <dg-table dg-dynamic-table [dynamicTable]="table"></dg-table>
     </div>
   </card>
 </div>
