--- a/src/app/pages/_user/produtos/podutos-main/podutos-main.component.html
+++ b/src/app/pages/_user/produtos/podutos-main/podutos-main.component.html
@@ -5,10 +5,7 @@
       <h4 class="card-title">Produtos</h4>
     </div>
     <div class="card-body">
-      <crud-data-table
-        [entityMap]="entity"
-      >
-      </crud-data-table>
+      <dg-table dg-dynamic-table [dynamicTable]="table"></dg-table>
     </div>
     <div class="card-footer">
       <button class="btn btn-success" [routerLink]="'novo'">Adicionar</button>
