--- a/src/app/pages/_user/permissoes/permissoes-main/permissoes-main.component.html
+++ b/src/app/pages/_user/permissoes/permissoes-main/permissoes-main.component.html
@@ -5,10 +5,10 @@
       <h4 class="card-title">Permissões</h4>
     </div>
     <div class="card-body">
-      <crud-data-table
-        [entityMap]="entity"
-      >
-      </crud-data-table>
+      <dg-table dg-dynamic-table [dynamicTable]="table"></dg-table>
+    </div>
+    <div class="card-footer">
+      <dg-paginator dg-dynamic-paginator [dynamicTable]="table"></dg-paginator>
     </div>
     <div class="card-footer">
       <button class="btn btn-success" [routerLink]="'novo'">Adicionar</button>
