--- a/src/app/pages/_user/lancamentos/lancamentos-main/lancamentos-main.component.html
+++ b/src/app/pages/_user/lancamentos/lancamentos-main/lancamentos-main.component.html
@@ -5,11 +5,10 @@
       <h4 class="card-title">Lançamentos</h4>
     </div>
     <div class="card-body">
-      <crud-data-table
-        [entityMap]="entity"
-        tableEventId="LancamentoEntity"
-      >
-      </crud-data-table>
+      <dg-table dg-dynamic-table [dynamicTable]="table"></dg-table>
+    </div>
+    <div class="card-footer">
+      <dg-paginator dg-dynamic-paginator [dynamicTable]="table"></dg-paginator>
     </div>
   </card>
 </div>
