alterando lib de teste para lib real

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
-@import "../node_modules/dg-ng-util/assets/scss/dg-ng-util";
+@import "../node_modules/@datagrupo/dg-ng-util/assets/scss/dg-ng-util";
 
 @import "./assets/scss/typography";
 @import "./assets/scss/util";
