--- a/src/app/pages/_user/clientes/clientes-main/clientes-main.component.html
+++ b/src/app/pages/_user/clientes/clientes-main/clientes-main.component.html
@@ -6,7 +6,7 @@
       <custom-filters group="clientes">
         <div body-filters>
           <form [formGroup]="form">
-            <div class="col-4">
+            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
               <label class="form-label">Nome</label>
               <input
                 class="form-control"
