--- a/src/app/pages/_user/produtos/podutos-main/podutos-main.component.html
+++ b/src/app/pages/_user/produtos/podutos-main/podutos-main.component.html
@@ -2,6 +2,25 @@
 
   <card>
     <div class="card-header">
+      <h4 class="card-title">Clientes</h4>
+      <custom-filters group="produtos">
+        <div body-filters>
+          <form [formGroup]="form">
+            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+              <label class="form-label">Nome</label>
+              <input
+                class="form-control"
+                formControlName="nome"
+                dg-dynamic-group="produtos"
+                paramName="nome"
+                (clearParams)="form.patchValue({ nome: '' })"
+              >
+            </div>
+          </form>
+        </div>
+      </custom-filters>
+    </div>
+    <div class="card-header">
       <h4 class="card-title">Produtos</h4>
     </div>
     <div class="card-body">
