criando modal de adição de serviços e produtos em locação

--- a/src/app/layouts/user-layout/user-layout.component.scss
+++ b/src/app/layouts/user-layout/user-layout.component.scss
@@ -2,7 +2,7 @@
 //@import "~src/assets/scss/mixin";
 
 ::ng-deep body {
-  background-color: #f5f5f5;
+  background-color: #e8e8e8;
 }
 
 ::ng-deep .wrapper {
