--- a/src/app/pages/_user/locacao/sub-components/modal-produto-locacao/modal-produto-locacao.component.html
+++ b/src/app/pages/_user/locacao/sub-components/modal-produto-locacao/modal-produto-locacao.component.html
@@ -4,9 +4,16 @@
       <div class="row">
         <div class="col-8">
           <label class="form-label">Produto</label>
-          <input class="form-control" formControlName="produto">
-<!--          <dg-autocomplete classes="form-control" formControlName="produto">-->
-<!--          </dg-autocomplete>-->
+<!--          <input class="form-control" formControlName="produto">-->
+
+          <dg-autocomplete
+            classes="form-control"
+            formControlName="produto"
+            label="nome"
+            typeFilter="outside"
+            [data]="listProdutos"
+          >
+          </dg-autocomplete>
         </div>
         <div class="col-4">
           <label class="form-label">Quantidade</label>
