--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,4 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @import "./assets/scss/components/modal";
 @import "./assets/scss/components/inputs";
 @import "./assets/scss/components/tables";
+@import "./assets/scss/components/buttons";
